--- a/image.html
+++ b/image.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Google Image Search</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <title>Google Image Search</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <style>
+            * {
+                /* border: blue solid 1px; */
+            }
+            .search {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+            }
+            .search-box {
+                width: 100%;
+                border-radius: 10%;
+            }
+            form {
+            width: 100%;
+            text-align: center; 
+            }
+            form img {
+                margin: auto; 
+                display: block; 
+            }
+            nav > a {
+                padding: 10px;
+            }
+            .container {
+                
+            }
+        </style>
+    </head>
+    <body>
+        <nav style="text-align: right;">
+            <a href="./index.html">Search</a>
+            <a href="./advanced.html">Advanced</a>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                </div>
+                <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12 search">
+                    <form action="https://google.com/search">
+                        <img src="https://www.google.ca/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
+                        <span style="text-align: right; color: rgb(52, 92, 236);">Images</span>
+                        <br>
+                        <input class="search-box" type="text" name="q">
+                        <br>
+                        <br>
+                        <input type="hidden" name="tbm" value="Google Image Search">
+                    </form>
+                </div>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
